Manifest_Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-broker
              port:
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apis
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /api/(.+)
          pathType: Prefix
          backend:
            service:
              name: api-crud-service
              port:
                number: 8081
    - http:
        paths:
        - path: /(auth.*)
          pathType: Prefix
          backend:
            service:
              name: api-autenticacao-service
              port:
                number: 8080
